Fix result header alignment

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ form {
 .results-header {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     max-width: 85%;
     margin-left: 30px;
 }
